# example-resize-image

./: .clangd  CMakeLists.txt  Makefile  README.md  edge-impulse-sdk  main.cpp
model-parameters/: model_metadata.h  model_variables.h
source/: bitmap_helpers.h
tflite-model/: tflite_learn_4_compiled.cpp  tflite_learn_4_compiled.h
